<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.romaniaquiz.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/cover_photo"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-light"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/title"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question1"/>
        <EditText
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:inputType="textCapWords"
            android:hint="@string/input_answer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question2"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">
            <RadioButton
                android:id="@+id/radio_budapest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question2_answer1"/>
            <RadioButton
                android:id="@+id/radio_bucharest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question2_answer2"/>
            <RadioButton
                android:id="@+id/radio_sofia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question2_answer3"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question3"/>
        <CheckBox
            android:id="@+id/answer3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/ButtonFont"
            android:textColor="@color/colorButton"
            android:text="@string/question3_answer1"/>
        <CheckBox
            android:id="@+id/answer3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/ButtonFont"
            android:textColor="@color/colorButton"
            android:text="@string/question3_answer2"/>
        <CheckBox
            android:id="@+id/answer3c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/ButtonFont"
            android:textColor="@color/colorButton"
            android:text="@string/question3_answer3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question4"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question4_answer1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question4_answer2"/>
            <RadioButton
                android:id="@+id/radio_republic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question4_answer3"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question5"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/timisoara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer1"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer2"/>
                <CheckBox
                    android:id="@+id/iasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_toRightOf="@id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer4"/>
                <CheckBox
                    android:id="@+id/constanta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer5"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/ButtonFont"
                    android:textColor="@color/colorButton"
                    android:text="@string/question5_answer6"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question6"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question6_answer1"/>
            <RadioButton
                android:id="@+id/radio_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question6_answer2" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question7"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question7_answer1" />
            <RadioButton
                android:id="@+id/radio_Leu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question7_answer2" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question7_answer3" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ButtonFont"
                android:textColor="@color/colorButton"
                android:text="@string/question7_answer4"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/QuestionFont"
            android:text="@string/question8"/>
        <EditText
            android:id="@+id/answer8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:inputType="textCapWords"
            android:hint="@string/input_answer"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="getResult"
            android:text="@string/result_button" />
    </LinearLayout>
</ScrollView>